add API get employee
