# src/routes/index.js
@@ -1,8 +1,10 @@
 const { Router } = require("express");
 const companyRoutes = require("./company.routes");
+const employeeRoutes = require("./employee.routes");
 
 const router = Router();
 
 router.use("/company", companyRoutes);
+router.use("/employee", employeeRoutes);
 
 module.exports = router;
